# amidi2net

./: .gitignore  LICENSE  Makefile.am  README.md  amidi2net-client.1  amidi2net-client.c  amidi2net-list.c  amidi2net-server.c  amidi2net.1  amidi2net.h  auth.c  common.c  config.h.in  configure.ac  io-rawmidi.c  io-seq-bridge.c  io-seq-common.c  io-seq-common.h  io-seq-hub.c  io-seq-stream-msg.c  lookup.c  mdns-publish.c  options.c  options.h  packet.c  packet.h
